# inferno

./: .env.template  .gitattributes  .gitignore  CMakeLists.txt  DEV_SETUP.md  Dockerfile  README.md  docker-compose.yml  inferno.sh
_docs/: about select() and poll().md  circle 01.md  how_sockets_work.md  inferno instructions.md  inferno_new_instructions.md  lptf_binary_protocol.md  on multi-os.md  project architecture.md  protocol summary.md  tools.md
_docs/project/: build_pipeline_&_artifact_flow.drawio
_docs/school/: inferno instructions.md
agent/: CMakeLists.txt  Dockerfile.agent
agent/include/: agent_dispatcher.hpp  agent_loop.hpp
agent/src/: agent_dispatcher.cpp  agent_loop.cpp  main.cpp  placeholder.cpp
agent/tests/: agent_dispatcher_test.cpp  agent_integration_test.cpp  main_test.cpp
server/: CMakeLists.txt  Dockerfile.server
server/include/: client_session.hpp  dispatcher.hpp  reactor.hpp  server_dispatcher.hpp  tcp_server.hpp
server/include/poller/: epoller.hpp
server/src/: client_session.cpp  dispatcher.cpp  main.cpp  reactor.cpp  server_dispatcher.cpp  tcp_server.cpp
server/src/poller/: epoller.cpp
server/tests/: agent_session_test.cpp  client_session_test.cpp  dispatcher_test.cpp  epoller_test.cpp  helpers_test.hpp  main_test.cpp  reactor_integration_test.cpp  server_dispatcher_test.cpp  server_integration_test.cpp  tcp_server_test.cpp
server/tests/c1/: c1_test_helpers.hpp  mock_socket.hpp  tcp_server_buffer_test.cpp  tcp_server_output_test.cpp  tcp_server_socket_test.cpp  test_client_session.cpp  test_dispatcher.cpp  test_server_flow.cpp  test_tcp_server.cpp
shared/: CMakeLists.txt
shared/include/: Idispatcher.hpp  agent_session.hpp  convert_endian.hpp  dispatcher.hpp  env_helper.hpp  i_dispatcher.hpp  logger.hpp
shared/include/dispatcher/: dispatcher.hpp  i_dispatcher.hpp
shared/include/exception/: lptf_exception.hpp  socket_exception.hpp
shared/include/poller/: i_poller.hpp  poller.hpp
shared/include/protocol/: lptf_protocol.hpp  protocol_helper.hpp  protocol_parser.hpp  protocol_serializer.hpp
shared/include/socket/: ISocket.hpp  SocketFactory.hpp  i_socket.hpp  linux_socket.hpp  socket_factory.hpp  socket_helper.hpp
shared/src/: Idispatcher.cpp  agent_session.cpp  dispatcher.cpp  env_helper.cpp  logger.cpp
shared/src/dispatcher/: dispatcher.cpp
shared/src/poller/: poller.cpp
shared/src/protocol/: protocol_helper.cpp  protocol_parser.cpp  protocol_parser_command.cpp  protocol_parser_data.cpp  protocol_parser_error.cpp  protocol_parser_register.cpp  protocol_parser_response.cpp  protocol_serializer.cpp
shared/src/socket/: linux_socket.cpp  socket_factory.cpp  socket_helper.cpp
shared/tests/: agent_session_test.cpp  convert_endian_test.cpp  helpers_test.hpp  main_test.cpp  test_constants.hpp  test_tcp_server.hpp
shared/tests/protocol/: protocol_parser_command_test.cpp  protocol_parser_data_test.cpp  protocol_parser_error_test.cpp  protocol_parser_register_test.cpp  protocol_parser_response_test.cpp  protocol_roundtrip_test.cpp  protocol_serializer_command_test.cpp  protocol_serializer_test.cpp  protocol_test_helpers.hpp
shared/tests/protocol/parser/: protocol_parser_command_test.cpp  protocol_parser_data_test.cpp  protocol_parser_error_test.cpp  protocol_parser_register_test.cpp  protocol_parser_response_test.cpp  protocol_parser_test.cpp
shared/tests/protocol/serializer/: protocol_serializer_command_test.cpp  protocol_serializer_data_test.cpp  protocol_serializer_register_test.cpp  protocol_serializer_response_test.cpp  protocol_serializer_test.cpp
shared/tests/socket/: mock_socket.hpp  mock_socket_helpers.hpp  socket_integration_test.cpp  socket_test_helpers.hpp  spy_socket.hpp
